2007-04-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): "plinkx" loads a session.  No default
	port.
	(tramp-default-user-alist): No default user for "plinkx".
	(tramp-completion-function-alist-putty): New defconst.
	(tramp-completion-function-alist): Add "plinkx" completion.
	(tramp-set-completion-function): Handle also registry keys.
	(tramp-parse-putty, tramp-parse-putty-group): New defuns.
	(tramp-action-login): Trace login prompt.

2007-04-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): New method "plinkx".
	(tramp-default-user-alist): Add default user for "plink" methods.
	(tramp-action-login): Read user name interactively when nil.

2007-04-15  Pete Forman  <pete.forman@westerngeco.com>  (tiny change)

	* tramp.el (tramp-default-user): Fix typo in docstring.  Value can
	also be nil.

2007-04-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Make `set-buffer-multibyte' an alias if it
	doesn't exist.
	(tramp-handle-directory-files-and-attributes-with-stat)
	(tramp-handle-file-attributes-with-stat): Return inode as real
	number.
	(tramp-convert-file-attributes): Convert inode into a list of two
	integers.

	Reported by Pete Forman <pete.forman@westerngeco.com>.

2007-04-08  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.9 released.

	* tramp.el (tramp-buffer-name, tramp-debug-buffer-name): We must
	use `tramp-file-name-real-host', because for gateway methods the
	default port will be expanded later on, which would tamper the
	name.
	(tramp-completion-mode): `last-input-event' is nil when XEmacs is
	started.

2007-04-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-compute-multi-hops): Fix error in setting hop.

2007-04-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-message): Don't print "Error" in level 1, this
	is part of the message already.
	(tramp-error-with-buffer, tramp-action-yesno, tramp-action-yn):