@@ -1,3 +1,7 @@
+2007-04-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el: New todo items.
+
 2007-04-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-methods): "plinkx" loads a session.  No default
